corrected stretched images in portfolio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,9 +96,10 @@ p {
 
   img {
     overflow: hidden;
-    vertical-align: middle
+    /* vertical-align: middle; */
     width: 100%;
     height: 425px;
+    object-fit: contain;
   }
 
   #project-links {
